# boost.json.codec

./: .gitignore  AutoDescribe.hpp  CMakeLists.txt  How-to-build.ko.md  JsonCodec.hpp  README.ko.md  README.md  main.cpp  model.hpp
scripts/: gen_describe.cmd  gen_describe.ps1  gen_describe.sh
tools/: gen_all_structs.py  gen_fields.py  make_describe.cmd  make_describe.ps1  make_describe.sh
